# apt-mirror2

./: .dockerignore  .gitignore  .gitlab-ci.yml  .trivtignore  .trivyignore  CONTRIBUTING.md  Dockerfile  README.md  apt-mirror.1  apt_mirror.py  mirror.list  mirror.sources  pyproject.toml  regenerate-dependencies.sh  requirements.dev.txt  requirements.txt  setup.py  verify_e2e.py
.agent/rules/: PROJECT_CONTEXT.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: ci.yml
apt_mirror/: __main__.py  aiofile.py  apt_mirror.py  config.py  download.py  filter.py  logs.py  netrc.py  prometheus.py  repository.py  uvloop.py  version.py
apt_mirror/download/: __init__.py  download_file.py  downloader.py  factory.py  file.py  format.py  ftp.py  http.py  proxy.py  response.py  slow_rate_protector.py  url.py
apt_mirror/download/protocols/: ftp.py  http.py
debian/: base-mirror.list  changelog  control  copyright  debian-mirror.list  postinst  postrm  python3-apt-mirror2.cron.d  rules  ubuntu-mirror.list  watch
debian/upstream/: metadata
requirements/: aiofiles.txt  dev.txt  prod.txt  prometheus.txt  uvloop.txt
tests/: base.py  test_clean.py  test_config.py  test_dependencies.py  test_download.py  test_main.py  test_repository.py  test_verify_hash_check.py
tests/data/BinaryGPGReleaseFile/repo/dists/test/: Release.gpg
tests/data/BrokenConfig/: mirror.list
tests/data/ByHashConfig/: mirror.list
tests/data/Deb822/: bookworm_mirror1.sources  bookworm_mirror10.sources  bookworm_mirror11.sources  bookworm_mirror2.sources  bookworm_mirror3.sources  bookworm_mirror4.sources  bookworm_mirror5.sources  bookworm_mirror6.sources  bookworm_mirror7.sources  bookworm_mirror8.sources  bookworm_mirror9.sources  mixed1.sources  mixed2.sources
tests/data/DebianArchiveBusterProposedUpdates/repo/dists/test/: InRelease
tests/data/DebianBookworm/: mirror1.list  mirror10.list  mirror11.list  mirror2.list  mirror3.list  mirror4.list  mirror5.list  mirror6.list  mirror7.list  mirror8.list  mirror9.list
tests/data/DebianBookworm/repo/dists/bookworm/main/binary-amd64/: Packages
tests/data/DebianBookworm/repo/dists/bookworm/main/source/: Sources
tests/data/DebianBookworm/repo1/dists/bookworm/: Release.gpg
tests/data/DebianBookworm/repo2/dists/bookworm/: Release
tests/data/FlatBrokenConfig/: mirror.list
tests/data/FlatConfig/: mirror.list
tests/data/GitlabRegistryPackages/repo/dists/test/main/binary-amd64/: Packages
tests/data/GitlabRegistryPackages/repo/dists/test/main/source/: Sources
tests/data/IgnoreErrorsConfig/: mirror.list
tests/data/IgnoreErrorsConfig/repository/dists/bullseye/: Release
tests/data/IgnoreErrorsConfig/repository/dists/bullseye/main/binary-amd64/: Packages
tests/data/Indexes/: Packages
tests/data/MaliciousRepository/repo/dists/test/: Release
tests/data/MaliciousRepository/repo/dists/test/main/binary-amd64/: Packages
tests/data/MaliciousRepository/repo/dists/test/main/source/: Sources
tests/data/MixedConfig/: mirror.list  mirror1.list
tests/data/NetRC/: auth1.conf  auth2.conf  auth3.conf  auth4.conf  mirror.list
tests/data/PathClean/5/: 6
tests/data/SignByConfig/: mirror.list
tests/data/SignedByConfig/: mirror.list
tests/data/SkipCleanConfig/: mirror.list
tests/data/SlashConfig/: mirror.list
tests/data/SrcOptionConfig/: mirror.list
tests/data/SyncedReleaseFiles/repo/dists/test/: Release  Release.gpg
tests/data/UnsyncedReleaseFiles/repo/dists/test/: InRelease  Release
