[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "apt-mirror"
version = "6a3"
authors = [
    {name = "Yuri Konotopov", email = "ykonotopov@gnome.org"},
]
description = "apt-mirror Python reimplementation"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["apt", "debian"]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Framework :: AsyncIO",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "aiofile==3.8.8",
    "aiolimiter==1.1.0",
    "aioftp==0.21.4",
    "httpx[http2]==0.26.0",
    "python-debian==0.1.49",
]

[project.optional-dependencies]
dev = [
    "black==24.3.0",
    "flake8==6.0.0",
    "isort==5.12.0",
    "pip-tools==7.4.1",
    "pylint==3.0.3",
    "pytest==7.4.4",
]
aiofiles = [
    "aiofiles==23.2.1"
]
prometheus = [
    "prometheus-client==0.20.0"
]
uvloop = [
    "uvloop==0.19.0",
]

[project.scripts]
apt-mirror = "apt_mirror.apt_mirror:main"

[project.urls]
Homepage = "https://gitlab.com/apt-mirror2/apt-mirror2/"
Repository = "https://gitlab.com/apt-mirror2/apt-mirror2.git"
Github = "https://github.com/nE0sIghT/apt-mirror2.git"
Issues = "https://gitlab.com/apt-mirror2/apt-mirror2/-/issues"
Changelog = "https://gitlab.com/apt-mirror2/apt-mirror2/-/commits/master/"

[tool.setuptools.packages.find]
include = ["apt_mirror*"]

[tool.black]
preview = true
enable-unstable-feature = ["string_processing"]

[tool.isort]
profile = "black"
default_section = "THIRDPARTY"
known_first_party = "apt_mirror"

[tool.pylint.main]
ignore-patterns = "^\\.#"
jobs = 0
disable = [
    "C0111",
    "W1203",
]
signature-mutators=[
    "click.decorators.option",
    "click.decorators.argument",
    "click.decorators.version_option",
    "click.decorators.help_option",
    "click.decorators.pass_context",
    "click.decorators.confirmation_option",
]

[tool.pyright]
exclude = [
    "build/",
    "contrib/",
    "dist/",
    "**/*.egg-info",
]

[tool.pytest.ini_options]
minversion = "7.0"
pythonpath = [
    "."
]
testpaths = [
    "tests",
]
